--- a/npcs/Races Classes and Subclasses/class_abilities.yaml
+++ b/npcs/Races Classes and Subclasses/class_abilities.yaml
@@ -1,4 +1,4 @@
-  #special-abilities: 
+  special-abilities: 
   - title: Rogue Abilities
   - abilities: 
     - title: Expertise
@@ -22,7 +22,7 @@
     - title: Stroke of Luck
     - content: If your Attack misses a target within range, you can turn the miss into a hit. Alternatively, if you fail an ability check, you can treat The D20 roll as a 20
 	   
-  #special-abilities: 
+  special-abilities: 
   - title: Wizard Abilities
   - abilities:
     - title: Arcane Recovery
@@ -59,7 +59,7 @@
     - content:    
 			
 			
-  #special-abilities: 
+  special-abilities: 
   - title: Warlock Abilities
   - abilities:
   - title: Pact Magic
@@ -100,7 +100,7 @@
     - content: you can spend 1 minute entreating your patron for aid to regain all your expended Spell Slots from your Pact Magic feature. Once you regain Spell Slots with this feature
 		 
 
-  #special-abilities: 
+  special-abilities: 
   - title: Fighter Abilities
   - abilities:
     - title: Fighting Style
@@ -115,7 +115,7 @@
     - content: you can reroll a saving throw that you fail. If you do so, you must use the new roll, and you can use this feature 3 times per Long Rest.
 		 
 
-  #special-abilities: 
+  special-abilities: 
   - title: Barbarian Abilities
   - abilities:
     - title: Unarmored Defense
@@ -150,7 +150,7 @@
     - content: Your Strength and Constitution scores increase by 4. Your maximum for those scores is now 24		 
 		 
 
-  #special-abilities: 
+  special-abilities: 
   - title: Bard Abilities
   - abilities:
   - title: Bard Spellcasting
@@ -197,7 +197,7 @@
     - content: When you roll Initiative and have no uses of Bardic Inspiration left, you regain one use.	   
 	   
  
-  #special-abilities:
+  special-abilities:
   - title: Sorcerer Abilities
   - abilities:
   - title: Sorcerer Spellcasting
@@ -259,7 +259,7 @@
     - content: you regain 4 expended sorcery points whenever you finish a Short Rest		  
 		
 
-  #special-abilities:
+  special-abilities:
   - title: Ranger Abilities
   - abilities:
   - title: Ranger Spellcasting
@@ -311,7 +311,7 @@
                the roll, but before any Effects of the roll are applied.					   
 
 
-  #special-abilities:
+  special-abilities:
   - title: Monk Abilities
   - abilities:
     - title: Unarmored Defense 
@@ -365,7 +365,7 @@
     - content: When you roll for Initiative and have no ki points remaining, you regain 4 ki points.					 
 
 
-  #special-abilities:
+  special-abilities:
   - title: Cleric Abilities
   - abilities:
   - title: Cleric Spellcasting
@@ -407,7 +407,7 @@
                no roll required.
 
 
-  #special-abilities:
+  special-abilities:
   - title: Artificer Abilities
   - abilities:
     - title: Magical Tinkering
@@ -452,7 +452,7 @@
                If you're reduced to 0 hit points but not killed out-right, you can use your reaction to end one of your artificer infusions, causing you to drop to 1 hit point instead of 0.	   
 
 
-  #special-abilities:
+  special-abilities:
   - title: Paladin Abilities
   - abilities:
     - title: Divine Sense
@@ -491,7 +491,7 @@
     - content:    
 
 
-  #special-abilities:
+  special-abilities:
   - title: Druid Abilities
   - abilities:
   - title: Druid Spellcasting
@@ -536,7 +536,7 @@
                     consumed by a spell. You gain this benefit in both your normal shape and your beast shape from Wild Shape.	
 
 
-  #special-abilities:
+  special-abilities:
   - title: Blood Hunter Abilities
   - abilities:
     - title: Hunters Bane
@@ -591,7 +591,7 @@
                a weapon attack empowered by your Crimson Rite, you regain one expended use of your Blood Maledict feature.	
 
 
-  #special-abilities:
+  special-abilities:
   - title: Pugilist Abilities
   - abilities:
     - title: Fisticuffs
@@ -658,7 +658,7 @@
                expended hit dice instead of half your expended hit dice   
 	   
 	   
-  #special-abilities:
+  special-abilities:
   - title: Shaman 3 Abilities
   - abilities:
   - title: Shaman 3 Spellcasting
@@ -721,7 +721,7 @@
     - content: You embody the spiritual power of the world and it infuses you with vigor and insight. Your Wisdom score increases by 4. Your maximum for this score is now 24       
    
    
-  #special-abilities:
+  special-abilities:
   - title: Shaman 2 Abilities
   - abilities:
   - title: Shaman 2 Spellcasting
@@ -789,7 +789,7 @@
                aren’t consumed by a spell.
 
 
-  #special-abilities:
+  special-abilities:
   - title: Shaman 1 Abilities
   - abilities:
   - title: Shaman 1 Spellcasting
@@ -847,7 +847,7 @@
 
 
 
-  #special-abilities:
+  special-abilities:
   - title: Shaman 4 Abilities
   - abilities:
   - title: Shaman 4 Spellcasting
@@ -918,7 +918,7 @@
 	
     
     
-  #special-abilities:
+  special-abilities:
   - title: Witch Abilities
   - abilities:
   - title: Witch Spellcasting
@@ -1052,7 +1052,7 @@
                Once you use this feature, you must finish a long rest before you can use it again.
                        
                        
-  #special-abilities:
+  special-abilities:
   - title: Doctor Abilities
   - abilities:
     - title: Medical Training
@@ -1105,7 +1105,7 @@
                                  
                                  
                                  
-  #special-abilities:
+  special-abilities:
   - title: Undertaker Abilities
   - abilities:
     - title: Skill Proficiencies
