--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -445,7 +445,7 @@ npc:
     condition-immunities:
     - Frightened, Charmed, Poisoned
     resistances:
-    - Necrotic, Fire
+    - Fire, Poison, Cold, Lightning
     skills:
     - Leatherworking
     proficiencies:
