--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -450,7 +450,8 @@ npc:
     - Leatherworking
     proficiencies:
     - Arcana
-    - Perception    
+    - Perception
+    - Deception    
     - Intimidation
     - Persuasion
     - Leatherworking Tools
