--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -443,7 +443,7 @@ npc:
     damage-immunities:
     - Necrotic
     condition-immunities:
-    - Frightened, Charmed, Poisoned
+    - Frightened, Charmed, Poisoned, Stunned
     resistances:
     - Fire, Poison, Cold, Lightning
     skills:
