--- a/npcs/anastasia_dumas.yaml
+++ b/npcs/anastasia_dumas.yaml
@@ -456,7 +456,7 @@ npc:
     - Intimidation
     - Persuasion
     - Leatherworking Tools
-    - Woodcrafter's Tools
+    - Woodcrafter Tools
   special-abilities:
   - title: Sorcerer Abilities
   - abilities: 
