--- a/npcs/aezodel.yaml
+++ b/npcs/aezodel.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: middle aged adult
+    age: Middle Aged Adult
 
     #
     # Races (case insensitive):
@@ -312,6 +312,7 @@ npc:
     - Common
     - Celestial
     - Infernal
+    - Abyssal
 
     #
     # Factions:
