--- a/npcs/abrinet_of_dire_dawa_riley.yaml
+++ b/npcs/abrinet_of_dire_dawa_riley.yaml
@@ -165,7 +165,7 @@ npc:
     #
     # Required.
     #
-    age: young adult
+    age: Young Adult
 
     #
     # Races (case insensitive):
@@ -524,19 +524,19 @@ npc:
     - title: Survivalist
     - content: Double proficiency bonus on Nature and Survival checks         
 
-  attacks: |
-    Short Sword or Hand Crossbow
-  combat-tactics: |
-    Abrinet will not hesitate to engage with hostile combatants, particularly if they are interfering with her 'running' messages with her colleagues.
-  special-equipment:
-  - title: Steam Shoes
-  - content: Filled with coal and ignited to double movement for 1-4 hours.
-  - title: Thieve's Tools
-  - content:
-  - title: Courier Bag of Holding
-  - content:
-  - title: Dog Vlad 
-  - content: At home with her husband
+  - title: Attacks
+  - content: Short Sword or Hand Crossbow
+  - title: Combat Tactics
+  - content: Abrinet will not hesitate to engage with hostile combatants, particularly if they are interfering with her 'running' messages with her colleagues.
+  - title: Special Equipment
+  - abilities:
+    - title: Steam Shoes
+    - content: Filled with coal and ignited to double movement for 1-4 hours.
+    - title: Courier Bag of Holding
+    - content: This bag has an interior space considerably larger than its outside dimensions, roughly 2 feet in diameter at the mouth and 4 feet deep. The bag can hold up to 1000 pounds, not exceeding a volume of 64 cubic feet. 
+               The bag weighs 15 pounds, regardless of its Contents. Retrieving an item from the bag requires an action.
+    - title: A Dog named Vlad 
+    - content: At home with her husband
    
   profile:
 
