--- a/npcs/aeureek_potomach.yaml
+++ b/npcs/aeureek_potomach.yaml
@@ -306,9 +306,9 @@ npc:
     # Optional.  0 or more.
     #
     factions:
-    - id: militia_of_hula_krah
-      name: Militia of Hula-krah
-      role: Diplomat
+    - id: council_of_coliar
+      name: Council of Coliar
+      role: Diplomat, Emissary
 
     #
     # Adjectives or other tags that can be used for searching.
