--- a/npcs/aezodel.yaml
+++ b/npcs/aezodel.yaml
@@ -334,7 +334,7 @@ npc:
     factions:
     - id: The_Dead_Hunters
       name: The Dead Hunters
-      role: Demon Hunter
+      role: Hunter
 
     #
     # Adjectives or other tags that can be used for searching.
